[package]
name = "avail_wallet"
version = "0.0.6"
description = "Frictionless control of your money and data."
authors = ["Avail"]
license = "Apache-2.0"
repository = "https://github.com/availx/avail-wallet"
edition = "2021"

[lib]
name = "availx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-plugin-fs = { version = "2.0.0-beta.2", features = [] }
tauri-plugin = { version = "=2.0.0-beta.9", features = [] }
tauri-utils = { version = "=2.0.0-beta.9", features = [] }
tauri-build = { version = "=2.0.0-beta.9", features = [] }


[dependencies]
app_dirs = { package = "app_dirs2", version = "2.5" }
avail-common = { git = "https://github.com/availx/avail-lib", tag = "v0.5.0", features = [
    "snarkvm",
] }
bs58 = "0.5.0"
chrono = "0.4.26"
dirs = "5.0.1"
dotenv = "0.15.0"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
futures = "0.3.28"
jni = { version = "0.21.1" }
keyring = "2.0.5"
libc = "0.2.147"
log = "0.4.19"
ndk-context = "0.1.1"
once_cell = "1.18.0"
openssl = { version = "0.10.36", features = ["vendored"] }
rand = "0.8.5"
rayon = "1.7.0"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snarkvm = { version = "0.16.17", features = [] }
ssss = "0.2.0"
tauri = { version = "=2.0.0-beta.11", features = [] }
tauri-plugin-deep-link = "2.0.0-beta.2"
tauri-plugin-http = { version = "2.0.0-beta.2", features = ["cookies"] }
tauri-plugin-updater = { version = "2.0.0-beta.2", features = [] }
tauri-plugin-process = "2.0.0-beta.2"
tiny-bip39 = "1.0.0"
tokio = { version = "1.29.1", features = ["full"] }
ureq = { version = "2.7.1", features = ["json"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
whoami = "1.4.1"
zeroize = { version = "1.7.0", features = [
    "aarch64",
    "zeroize_derive",
    "alloc",
] }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = "2.0.5"
security-framework = { git = "https://github.com/AvailX/rust-security-framework" }
security-framework-sys = { git = "https://github.com/AvailX/rust-security-framework" }
core-foundation = "0.9.3"
tid-rs = { git = "https://github.com/Zack-Xb/tid-rs" }


[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 2
lto = "thin"
incremental = true


[profile.test]


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
rstest = "0.18.2"
